--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+img {
+  border-radius: 70%;
+}
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 18px;
+}
+
 .footer-container {
   padding-bottom: 4rem;
   font-family: Arial, Helvetica, sans-serif;
